// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return viewing 1 expense 1`] = `
<div>
  <h2>
     Viewing 
    1
     
    expense
     totalling 
    $200.00
  </h2>
</div>
`;

exports[`Should return viewing all expenses 1`] = `
<div>
  <h2>
     Viewing 
    12
     
    expenses
     totalling 
    $200.00
  </h2>
</div>
`;
